--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "^0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "babel-loader": "^8.2.5",
+    "webpack": "^5.74.0"
   },
   "private": true
 }
